fix spacing

--- a/src/components/Header/Nav/navBar.module.css
+++ b/src/components/Header/Nav/navBar.module.css
@@ -96,7 +96,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999;
 }
 
 .modalContentWrapper {
