--- a/src/components/LeftSidebar/leftSidebar.module.css
+++ b/src/components/LeftSidebar/leftSidebar.module.css
@@ -8,7 +8,7 @@
 }
 
 .navGroups {
-  padding: 0 40px 40px 0;
+  padding: 0 var(--space-10x) var(--space-10x) 0;
 
   overflow-y: auto;
   scrollbar-width: thin;
@@ -119,7 +119,7 @@ details[open] > .navGroupTitle {
 }
 
 .quickLinks {
-  margin-top: var(--space-10x);
+  margin-top: 60px;
 }
 
 .headerLink {
